Add restart policies so that services restart after reboot and app container does not give up after first failure

--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
       ./.env
     depends_on:
       - db
+    restart: always
 
   db:
     image: postgres:15
@@ -15,6 +16,7 @@ services:
       - brew_it_again_postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.db
+    restart: always
 
 volumes:
   brew_it_again_postgres_data:
