--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,22 +1,20 @@
 services:
   web:
     build: ./bia_proj
-    command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate --noinput && gunicorn bia_proj.wsgi:application --bind 0.0.0.0:8210"
+    command: "gunicorn bia_proj.wsgi:application --bind 0.0.0.0:8000"
     ports:
-      - "127.0.0.1:8000:8210"
+      - "127.0.0.1:8000:8000"
     env_file:
-      ./.env
+      ./.env.prod
     depends_on:
       - db
-    restart: always
 
   db:
     image: postgres:15
     volumes:
       - brew_it_again_postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.db
-    restart: always
+      - ./.env.prod.db
 
 volumes:
   brew_it_again_postgres_data:
