--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: ./bia_proj
-    command: "python manage.py runserver"
+    command: "python manage.py runserver 0.0.0.0:8000"
     ports:
       - "127.0.0.1:8000:8000"
     env_file:
