Add mkdir to create staticfiles directory to avoid permissions issues

--- a/bia_proj/Dockerfile.prod
+++ b/bia_proj/Dockerfile.prod
@@ -39,6 +39,8 @@ RUN chmod +x $BIA_HOME/entrypoint.prod.sh
 
 COPY . $BIA_HOME
 
+RUN mkdir $BIA_HOME/staticfiles/
+
 RUN chown -R bia:bia $BIA_HOME
 
 USER bia
